# Octopus

./: s
books/: introduce.py  rock_paper_scissors.py
mds_py/: client.py  commands.py  mds_client.py  mds_commands.py  mds_service.py  mds_utils.py  mds_vocabulary.py  pyproject.toml  requirements.txt  search.py
mds_py/.mds_py/bootstrap/: commit.yaml  commit_tail.yaml  idx_reg.yaml  proc_reg.yaml  transaction.yaml
mds_py/etc/: avro_.py  config.json  echo.py  polars_1.py  read_multi_doc.py  sample.avro  vector.py
mds_py/mds-env/: pyvenv.cfg
mds_py_app/: file_meta.py  mds_service.py  meta_builder.py  play.py
mds_py_app/etc/: config.yml  main.py  myyaml.py  print_json.py  processor.py  weather.avro
